# NY-taxi-Zoomcamp-Project

./: .gitignore  README.md  requirements.txt
01 - pipeline/: Dockerfile  pipeline.py  pyproject.toml
02 - workflow orchestration/: docker-compose.yml
02 - workflow orchestration/flows/: 01_hello_word.yaml  06_gcp_kv.yaml
03 - data-warehouse/: README.md  load_yellow_taxi_data.py
03 - data-warehouse/query_sql/: bigquery_ml_models.sql  bigquery_nytaxi.sql  yellow_taxi_data_homework.sql
04 - analytics engineering/: README.md  load_nytaxi_data.py
04 - analytics engineering/dbt_taxi_rides_ny/: README.md
04 - analytics engineering/dbt_taxi_rides_ny/macros/: get_vendor_names.sql  map_payment_type.sql
04 - analytics engineering/dbt_taxi_rides_ny/models/marts/: dim_payment_type.sql  dim_vendors.sql  dim_zones.sql  fct_duplicates.sql  fct_trips.sql
04 - analytics engineering/dbt_taxi_rides_ny/models/staging/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04 - analytics engineering/homework/: README.md
04 - analytics engineering/homework/models/marts/: fct_trips.sql  (+1 more)
04 - analytics engineering/homework/seeds/: payment_type_lookup.csv
04 - analytics engineering/scripts/: load_fhv_data.py  load_nytaxi_data.py
05 - data platform/: README.md
05 - data platform/homework/: README.md
05 - data platform/my-taxi-pipeline/: .gitignore
05 - data platform/my-taxi-pipeline/pipeline/: pipeline.yml
dlt-workshop/taxi-pipeline/: .gitignore  README.md  dlt_Pipeline_Overview.ipynb  pyproject.toml  taxi_pipeline.py
pipeline/: Dockerfile  notebook.ipynb
(+9 files in other folders)
