[project]
name = "taxi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[workspace]>=1.22.0",
    "numpy>=2.4.2",
    "pandas>=2.0.0",
    "marimo>=0.8.0",
    "ibis-framework>=8.0.0",
    "matplotlib>=3.8.0",
    "duckdb>=1.4.4",
]